# MDB

./: .gitignore  .gitmodules  Cargo.toml  README.md  _dev_config.json  build.rs
docs/: getting-started.md  micro-http.md
frontend/: 404.html  common.js  index.html  login.html  signin.html
frontend/js/: app-main.js  web-socket.js
src/: http_request_processor.rs  main.rs  ws_request_processor.rs
src/http_server/: Cargo.toml
src/http_server/src/: lib.rs
src/live-reload/: Cargo.toml
src/live-reload/src/: lib.rs
src/logger/: Cargo.toml
src/logger/src/: init.rs  lib.rs  logger.rs
src/mdb/: Cargo.toml
src/mdb/src/: http_server_adapter.rs  main.rs  ws_server_adapter.rs
src/mdbm/: Cargo.toml
src/mdbm/src/: lib.rs
src/net/: Cargo.toml
src/net/src/: auth_processor.rs  http_request_processor.rs  lib.rs  login_processor.rs  ws_request_processor.rs
src/utils/: Cargo.toml
src/web-server/: Cargo.toml
src/web-server/src/: lib.rs  parsed_request.rs
src/web-server/src/request/: common_js.rs  index.rs  js.rs  mod.rs
src/web_server/: Cargo.toml
src/web_server/src/: common.rs  lib.rs  parsed_request.rs
src/ws-server/: Cargo.toml
src/ws-server/src/: lib.rs
tcp-proxy/: main.py
test/any/: Cargo.toml
test/any/src/: main.rs
test/detect_end_of_response/: detect_response_body.py  response_body_len_1024.txt  response_body_len_1025.txt  response_body_len_144.txt
test/pstdin/: main.py
tools/: README.md  devtool
tools/devctr/: .tmux.conf  Dockerfile  Dockerfile.x86_64  config.fish  docker-entrypoint.sh  init.vim
(+5 files in other folders)
