[package]
name = "mdb"
version = "1.1.0"
authors = ["Mahesh"]
edition = "2021"
build = "../../build.rs"
description = "Description."
homepage = "https://mahesh-maximus.github.io//mahesh-maximus/"
license = "MIT License"

[dependencies]
libc = "0.2.139"

mdbm = { path = "../mdbm" }
web_server = {path = "../web-server"}
ws_server = {path = "../ws-server"}
live_reload = {path = "../live-reload"}


